change unit test

--- a/test/ref/css/test.css
+++ b/test/ref/css/test.css
@@ -1,9 +1,15 @@
-.img1{
-    background-image: url(../images/img_1.png);
+.img1 {
+  background-image: url(../images/img_1.png);
 }
-.img2{
-    background-image: url("../images/img_2.png");
+
+.img1 {
+  background-image: url('../images/img_1.png');
 }
-.img3{
-    background-image: url("../images/img_3.png");
+
+.img2 {
+  background-image: url("../images/inner-img/img_2.png");
+}
+
+.img3 {
+  background-image: url("../images/img_3.png");
 }
